Bug 777088 - device Storage - file stat API. r=bent